Register y login en el front OK

--- a/back/config/config.env
+++ b/back/config/config.env
@@ -6,3 +6,7 @@ DB_LOCAL_URI = mongodb://localhost:27017/petShop
 JWT_SECRET=IKBGLKNROGIAY8R4Y3IUG8IGIBHO7YHIH
 JWT_TIEMPO_EXPIRACION= 1d
 COOKIE_EXPIRES_TIME= 1
+
+CLOUDINARY_CLOUD_NAME=petshopdevjs
+CLOUDINARY_APY_KEY=688469161426692
+CLOUDINARY_API_SECRET=Wgi2nLJZnBDnwiQn7WICc-iULHc
